2008-06-05  Jakub Jelinek  <jakub@redhat.com>

	* misc/regexp.h (compile): Use __REPB_PREFIX macro.
	Avoid segfault if first GETC returns eof/'\0'/'\n'.

2008-06-03  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd_getserv_r.c (__nscd_getservbyport_r): Pass cp
	instead of portstr to nscd_getserv_r.  Patch by
	Roman Kagan <rkagan@mail.ru>.

2008-05-26  Jim Meyering  <meyering@redhat.com>

	Remove more useless "if" tests before "free".
	* include/inline-hashtab.h (htab_delete): Likewise.
	* libio/freopen.c (freopen): Likewise.
	* libio/freopen64.c (freopen64): Likewise.
	* locale/programs/ld-collate.c (collate_read): Likewise.
	* misc/fstab.c (libc_freeres_fn): Likewise.
	* posix/glob.c (globfree): Likewise.

2008-05-24  Ulrich Drepper  <drepper@redhat.com>

	* string/Makefile (strop-tests): Add memmem.
	* string/test-memmem.c: New file.
	* string/test-string.h (BUF1PAGES): Define to 1 if undefined.
	(test_init): Size buf1 according to BUF1PAGES.

2008-05-24  Jakub Jelinek  <jakub@redhat.com>

	* libio/stdio.h (vscanf): Fix -std=c99 redirect.
	* stdio-common/Makefile (tests): Add scanf16 and scanf17.
	(CFLAGS-scanf17.c): New.
	* stdio-common/scanf14.c (main): Add fscanf and scanf tests.
	* stdio-common/scanf15.c (main): Likewise.
	* stdio-common/scanf16.c: New file.
	* stdio-common/scanf17.c: New file.

2008-05-24  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c (send_dg): If we already have one of two
	answers and the server reports SERVFAIL, NOTIMP, or REFUSED, then
	use the one answer insted of failing.

2008-02-20  Ryan S. Arnold  <rsa@us.ibm.com>

	* math/libm-test.inc (exp_test): Exclude expl(1000.0L) from
	being executed on PowerPC as the expected result exceeds IBM
	long double 128 __LDBL_MAX__.

2008-05-21  Roland McGrath  <roland@redhat.com>

	* shlib-versions (sparc.*-.*-.*, sparc64.*-.*-.*): Add ABI lines.

	* Makefile (check-data): Use $(abi-name) before other guesses.
	Look in $(add-ons) dirs before scripts/data/.